--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -49,9 +49,9 @@ options(digits = 3)
 
 The targeted amplification and sequencing of DNA that living organisms shed into their physical environment, termed "environmental DNA (eDNA) metabarcoding",  is revolutionizing microbiology, ecology, and conservation research [@Taberlet_2012; @Deiner_2017].  Sequencing of environmental DNA extracted from field-collected soil, water, or sediment samples can yield insight into a range of questions, from profiling the composition of ancient plant and animal communities [@Pedersen_2014], to motoring populations of rare or endangered species [@Balasingham_2017]. As the cost of eDNA metabarcoding declines and sample collection techniques become more streamlined (e.g. @Thomas_2018), professional research scientists are increasingly using eDNA metabarcoding as a platform to engage a diversity of community partners, including natural resource managers, undergraduate students, and citizen scientists in primary research. However, developing robust and impactful community science programs that engage community partners in all steps of the research process remains a challenge.
 
-eDNA metabarcoding-based projects work well for programs that partner researchers with community scientists because non-experts can be quickly trained to collect samples in the field, and because eDNA metabarcoding is an exciting framework for research pertinent to disciplines such as medicine, agriculture, ecology, and geography [@Deiner_2017]. Community partners in such programs can have heterogeneous backgrounds, ranging from curious members of the public for whom collecting samples in the field is their first scientific research experience (e.g. University of California’s CALeDNA program, http://www.ucedna.com/), to professional natural resource managers who regularly collaborate with research scientists (e.g. Center for Ocean Solutions’ eDNA project, https://oceansolutions.stanford.edu/project-environmental-dna). A key ingredient to promote sustained engagement of community partners in these programs is that they should be able to participate across multiple stages of the research project, not only in sample collection [@Pandya_2012; @ECSA_2015]. This can be a challenge for eDNA metabacoding-based community science programs because although it is relatively easy to train community partners to collect eDNA samples, it is far more challenging to train them to independently visualize and analyze results from these studies. Indeed, learning the bioinformatic tools necessary for managing the large, multidimensional datasets generated in these studies can be difficult for professional researchers (Carey & Papin 2018), let alone for the non-technical audience of community science programs. 
+eDNA metabarcoding-based projects work well for programs that partner researchers with community scientists because non-experts can be quickly trained to collect samples in the field, and because eDNA metabarcoding is an exciting framework for research pertinent to disciplines such as medicine, agriculture, ecology, and geography [@Deiner_2017]. Community partners in such programs can have heterogeneous backgrounds, ranging from curious members of the public for whom collecting samples in the field is their first scientific research experience (e.g. University of California’s CALeDNA program, http://www.ucedna.com/), to professional natural resource managers who regularly collaborate with research scientists (e.g. Center for Ocean Solutions’ eDNA project, https://oceansolutions.stanford.edu/project-environmental-dna). A key ingredient to promote sustained engagement of community partners in these programs is that they should be able to participate across multiple stages of the research project, not only in sample collection [@Pandya_2012; @ECSA_2015]. This can be a challenge for eDNA metabacoding-based community science programs because although it is relatively easy to train community partners to collect eDNA samples, it is far more challenging to train them to independently visualize and analyze results from these studies. Indeed, learning the bioinformatic tools necessary for managing the large, multidimensional datasets generated in these studies can be difficult for professional researchers (Carey & Papin 2018), let alone for the non-technical audience of some community science programs. 
 
-To address this challenge, we created an R package “ranacapa”, at the core of which is a Shiny webapp that can be used to visualize results from eDNA sequencing studies and perform simple community ecology analyses. `ranacapa` complements existing visualization platforms (e.g. Phinch, Phyloseq-Shiny, QIIME2 Viewer), because in addition to interactive visualizations, `ranacapa` includes brief explanations of several core analyses used in eDNA studies and includes links to additional educational resources. `ranacapa` works with community matrices generated via QIIME [Caporaso_2010] or the Anacapa sequence analysis pipeline (https://github.com/limey-bean/Anacapa), the latter being used extensively by the CALeDNA program.
+To address this challenge, we created an R package “ranacapa”, at the core of which is a Shiny webapp that can be used to visualize results from eDNA sequencing studies and perform simple community ecology analyses. `ranacapa` complements existing visualization platforms (e.g. Phinch, Phyloseq-Shiny, QIIME2 Viewer), because in addition to interactive visualizations, `ranacapa` includes brief explanations of several core analyses used in eDNA studies and includes links to additional educational resources. `ranacapa` works with community matrices generated via QIIME [@Caporaso_2010] or the Anacapa sequence analysis pipeline (https://github.com/limey-bean/Anacapa), the latter being used extensively by the CALeDNA program.
 
 Here, we describe the package and how it is used by two community science partnerships based at the University of California, Los Angeles (UCLA): first, a collaboration between eDNA researchers and resource managers at the National Park Service, and second, a partnership between community ecology researchers and an undergraduate microbiology course at UCLA. As we show in the Use Cases, empowering community partners to interact with the data and perform simple but insightful community ecology analyses can help make these collaborations more enriching and valuable to both parties.     
 
@@ -114,7 +114,7 @@ We expect that researchers with bioinformatic expertise will use the sequence an
 
 A team of UCLA researchers partnered with resource managers at the Channel Islands National Park Service to assess the potential for eDNA as a biodiversity monitoring tool to supplement expensive and time-intensive visual biodiversity surveys in the Southern California Channel Islands [@Lessios_1996; @Usseglio_2015; @Deiner_2017]. For this partnership, resource managers collected and filtered thirty unique one-liter water samples for eDNA analysis at permanent monitoring sites inside and adjacent to protected areas, and research scientists at UCLA performed eDNA sequencing of the mitochondrial 12S [@Miya_2015] and CO1 [Leray_2013] genes, targeting bony fishes, elasmobranches, and invertebrate taxa. The researchers processed sequences and assigned taxonomy using the Anacapa pipeline, and shared results with the resource managers using the `ranacapa` Shiny app. 
 
-The taxonomy heatmap of species detected using the 12S and CO1 metabarcodes (Figure 2) was the most valuable visualization to this collaboration, because it allowed the resource managers to filter the large observed species list down to a particular set of key taxa that they regularly monitor. The heatmap showed that this pilot study detected 36 of the 70 key metazoans at the species level, and the remaining 34 at the genus, family, or order level. This indicates that eDNA-based studies can provide critical information for ongoing management efforts and provide new insights into the spatial and temporal distributions of these species. The value of `ranacapa` in this scenario was to quickly sort through long species lists generated in by eDNA sequencing to highlight the strengths and weaknesses in using eDNA to monitor diversity in the Channel Islands. The data from this study are packaged as the demo dataset for the `ranacapa` Shiny web-app and are available online at XXX.
+The taxonomy heatmap of species detected using the 12S and CO1 metabarcodes (Figure 2) was the most valuable visualization to this collaboration, because it allowed the resource managers to filter the large observed species list down to a particular set of key taxa that they regularly monitor. The heatmap showed that this pilot study detected 36 of the 70 key metazoans at the species level, and the remaining 34 at the genus, family, or order level. This indicates that eDNA-based studies can provide critical information for ongoing management efforts and provide new insights into the spatial and temporal distributions of these species. The value of `ranacapa` in this scenario was to quickly sort through long species lists generated in by eDNA sequencing to highlight the strengths and weaknesses in using eDNA to monitor diversity in the Channel Islands. The data from this study are packaged as the demo dataset for the `ranacapa` Shiny app and are available online at XXX.
 
 ### Use Case 2: Partnership between eDNA researchers and an undergraduate microbiology course
 
@@ -124,13 +124,13 @@ The course instructors used the `ranacapa` Shiny app to introduce students to th
 
 ## Summary and Future Directions
 
-Metabarcode sequencing of environmental DNA is becoming a key tool in a wide variety of ecological studies, and results from these studies are of interest to a broad audience.  Our `R` package and Shiny web-app `ranacapa` helps users conduct exploratory analyses and visualizations on eDNA datasets, and is a step toward more fully engaging participants in all phases of eDNA sequencing-based community science projects.
+Metabarcode sequencing of environmental DNA is becoming a key tool in a wide variety of ecological studies, and results from these studies are of interest to a broad audience.  Our `R` package and Shiny app `ranacapa` helps users conduct exploratory analyses and visualizations on eDNA datasets, and is a step toward more fully engaging participants in all phases of eDNA sequencing-based community science projects.
 
-We propose three avenues for future work with ranacapa. First, we plan to use `ranacapa` as the primary tool to present eDNA results from hundreds of samples sequenced by the CALeDNA community science program.  Second, `ranacapa` is being integrated into the upcoming undergraduate curriculum module "Pipeline for Undergraduate Microbiome Analysis", which will be an open-source, comprehensive suite of analysis and data visualization tools for undergraduate researchers. Finally, in the long-term, we believe there is great promise in linking `ranacapa` with packages that connect with APIs of online biodiversity databases (e.g. Taxize [Chamberlain_2013], rinat [@Barve_2017]). This will help users explore a much wider range of biodiversity questions, for example, by programmatically asking whether their samples include invasive species that are absent from other nearby sites. In sum, tools like `ranacapa` that allow non-technical audiences to easily interact with results from eDNA sequencing studies have great potential to engage community partners with a wide range of backgrounds and interests in primary research.
+We propose three avenues for future work with ranacapa. First, we plan to use `ranacapa` as the primary tool to present eDNA results from hundreds of samples sequenced by the CALeDNA community science program.  Second, `ranacapa` is being integrated into the upcoming undergraduate curriculum module "Pipeline for Undergraduate Microbiome Analysis", which will be an open-source, comprehensive suite of analysis and data visualization tools for undergraduate researchers. Finally, in the long-term, we believe there is great promise in linking `ranacapa` with packages that connect with APIs of online biodiversity databases (e.g. Taxize [@Chamberlain_2013], rinat [@Barve_2017]). This will help users explore a much wider range of biodiversity questions, for example, by programmatically asking whether their samples include invasive species that are absent from other nearby sites. In sum, tools like `ranacapa` that allow non-technical audiences to easily interact with results from eDNA sequencing studies have great potential to engage community partners with a wide range of backgrounds and interests in primary research.
 
 ## Software availability
 
-- A Shiny web-app, including a dataset generated for demonstrations, is available at https://gauravsk.shinyapps.io/ranacapa  
+- A Shiny app, including a dataset generated for demonstrations, is available at https://gauravsk.shinyapps.io/ranacapa  
 - `ranacapa` is available for installation at https://github.com/gauravsk/ranacapa  
 - Link to source code as at time of publication (F1000Research TO GENERATE)  
 - Link to archived source code as at time of publication (F1000Research TO GENERATE)  
